--- a/portfolio.html
+++ b/portfolio.html
@@ -9,170 +9,182 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="part-logo">Studio</span></a
-        >
-        <ul class="list page-navigation">
-          <li><a href="./index.html" class="link page-link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="link page-link">Portfolio</a>
-          </li>
-          <li><a href="" class="link page-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address-list">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container page-header">
+        <nav class="navigation">
+          <a href="./index.html" class="logo link"
+            >Web<span class="part-logo">Studio</span></a
+          >
+          <ul class="list page-navigation">
+            <li><a href="./index.html" class="link page-link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="link page-link">Portfolio</a>
+            </li>
+            <li><a href="" class="link page-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="list address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section>
-        <h1 hidden>Portfolio</h1>
-        <ul class="list">
-          <li><button type="button" class="filter-button">All</button></li>
-          <li><button type="button" class="filter-button">Web Site</button></li>
-          <li><button type="button" class="filter-button">App</button></li>
-          <li><button type="button" class="filter-button">Design</button></li>
-          <li>
-            <button type="button" class="filter-button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img1.jpg"
-                alt="bank app photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Banking App Interface Concept</h2>
-              <p class="portfolio-paragraph">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img2.jpg"
-                alt="cashless mobile phone photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Cashless Payment</h2>
-              <p class="portfolio-paragraph">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img3.jpg"
-                alt="laptop and mobile phone photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Meditation App</h2>
-              <p class="portfolio-paragraph">App</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img4.jpg"
-                alt="inside of the car with steering wheel photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Taxi Service</h2>
-              <p class="portfolio-paragraph">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img5.jpg"
-                alt="mobile phone screens photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Screen Illustrations</h2>
-              <p class="portfolio-paragraph">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img6.jpg"
-                alt="smiley fashionable young woman photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Online Courses</h2>
-              <p class="portfolio-paragraph">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img7.jpg"
-                alt="online courses website photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Instagram Stories Concept</h2>
-              <p class="portfolio-paragraph">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img8.jpg"
-                alt="person carrying shopping bag with vegetables photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Organic Food</h2>
-              <p class="portfolio-paragraph">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio-img9.jpg"
-                alt="barrista pouring milk into the coffee photo"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-header">Fresh Coffee</h2>
-              <p class="portfolio-paragraph">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h1 hidden>Portfolio</h1>
+          <ul class="list">
+            <li><button type="button" class="filter-button">All</button></li>
+            <li>
+              <button type="button" class="filter-button">Web Site</button>
+            </li>
+            <li><button type="button" class="filter-button">App</button></li>
+            <li><button type="button" class="filter-button">Design</button></li>
+            <li>
+              <button type="button" class="filter-button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="list">
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img1.jpg"
+                  alt="bank app photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Banking App Interface Concept</h2>
+                <p class="portfolio-paragraph">App</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img2.jpg"
+                  alt="cashless mobile phone photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Cashless Payment</h2>
+                <p class="portfolio-paragraph">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img3.jpg"
+                  alt="laptop and mobile phone photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Meditation App</h2>
+                <p class="portfolio-paragraph">App</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img4.jpg"
+                  alt="inside of the car with steering wheel photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Taxi Service</h2>
+                <p class="portfolio-paragraph">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img5.jpg"
+                  alt="mobile phone screens photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Screen Illustrations</h2>
+                <p class="portfolio-paragraph">Design</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img6.jpg"
+                  alt="smiley fashionable young woman photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Online Courses</h2>
+                <p class="portfolio-paragraph">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img7.jpg"
+                  alt="online courses website photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Instagram Stories Concept</h2>
+                <p class="portfolio-paragraph">Design</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img8.jpg"
+                  alt="person carrying shopping bag with vegetables photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Organic Food</h2>
+                <p class="portfolio-paragraph">Web Site</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio-img9.jpg"
+                  alt="barrista pouring milk into the coffee photo"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-header">Fresh Coffee</h2>
+                <p class="portfolio-paragraph">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-section">
-      <a href="./index.html" class="logo link"
-        >Web<span class="footer-logo">Studio</span></a
-      >
-      <p class="footer-note">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo link"
+          >Web<span class="footer-logo">Studio</span></a
+        >
+        <p class="footer-note">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
