--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap"
       rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Web Studio</title>
@@ -49,8 +49,13 @@
     </header>
     <main>
       <section class="section order-section">
-        <h1 class="main-header">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-button">Order Service</button>
+        <div class="container">
+          <h1 class="main-header">
+            Effective Solutions <br />
+            for Your Business
+          </h1>
+          <button type="button" class="order-button">Order Service</button>
+        </div>
       </section>
       <section class="section">
         <div class="container">
