services-section-layout

--- a/index.html
+++ b/index.html
@@ -60,29 +60,29 @@
       <section class="section">
         <div class="container">
           <h2 hidden>Services Description</h2>
-          <ul class="list">
-            <li>
+          <ul class="list services-section">
+            <li class="services-item">
               <h3 class="small-header">Strategy</h3>
               <p class="services-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="services-item">
               <h3 class="small-header">Punctuality</h3>
               <p class="services-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="services-item">
               <h3 class="small-header">Diligence</h3>
               <p class="services-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="services-item">
               <h3 class="small-header">Technologies</h3>
               <p class="services-description">
                 Design practice focused on digital experiences. We bring forth a
