--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer-section">
+    <footer class="section footer-section">
       <div class="container">
         <a href="./index.html" class="logo link"
           >Web<span class="footer-logo">Studio</span></a
