third-section-layout

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 hidden>Services Description</h2>
+          <h2 class="visually-hidden">Services Description</h2>
           <ul class="list services-section">
             <li class="services-item">
               <h3 class="small-header">Strategy</h3>
@@ -92,10 +92,10 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="sectiont">
         <div class="container">
           <h2 class="section-header">What are we doing</h2>
-          <ul class="list">
+          <ul class="list third-section-list">
             <li>
               <img
                 src="./images/gallery-img1.jpg"
