--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 hidden>Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="list">
             <li><button type="button" class="filter-button">All</button></li>
             <li>
