--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Web Studio</title>
   </head>
   <body>
-    <header>
-      <div class="container page-header">
+    <header class="page-header">
+      <div class="container header-layout">
         <nav class="navigation">
           <a href="./index.html" class="logo link"
             >Web<span class="part-logo">Studio</span></a
@@ -126,7 +126,7 @@
       <section class="section team-section">
         <div class="container">
           <h2 class="section-header">Our team</h2>
-          <ul class="list">
+          <ul class="list team-list">
             <li class="team-tile">
               <img
                 src="./images/team-img1.jpg"
@@ -134,7 +134,7 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header">Mark Guerrero</h3>
+              <h3 class="small-header team-header">Mark Guerrero</h3>
               <p class="job-title">Product Designer</p>
             </li>
             <li class="team-tile">
@@ -144,7 +144,7 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header">Tom Ford</h3>
+              <h3 class="small-header team-header">Tom Ford</h3>
               <p class="job-title">Frontend Developer</p>
             </li>
             <li class="team-tile">
@@ -154,7 +154,7 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header">Camila Garcia</h3>
+              <h3 class="small-header team-header">Camila Garcia</h3>
               <p class="job-title">Marketing</p>
             </li>
             <li class="team-tile">
@@ -164,7 +164,7 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header">Daniel Wilson</h3>
+              <h3 class="small-header team-header">Daniel Wilson</h3>
               <p class="job-title">UI Designer</p>
             </li>
           </ul>
