--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="list">
+          <ul class="list filter-list">
             <li><button type="button" class="filter-button">All</button></li>
             <li>
               <button type="button" class="filter-button">Web Site</button>
