--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
               <button type="button" class="filter-button">Marketing</button>
             </li>
           </ul>
-          <ul class="list">
+          <ul class="list portfolio-list">
             <li>
               <a href="" class="link">
                 <img
