--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
     <main>
       <section class="section order-section">
         <div class="container">
-          <h1 class="main-header">
-            Effective Solutions <br />
-            for Your Business
-          </h1>
+          <h1 class="main-header">Effective Solutions for Your Business</h1>
           <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
@@ -92,11 +89,11 @@
           </ul>
         </div>
       </section>
-      <section class="sectiont">
+      <section class="section">
         <div class="container">
           <h2 class="section-header">What are we doing</h2>
           <ul class="list third-section-list">
-            <li>
+            <li class="third-section-item">
               <img
                 src="./images/gallery-img1.jpg"
                 alt="pc screen photo"
@@ -104,7 +101,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="third-section-item">
               <img
                 src="./images/gallery-img2.jpg"
                 alt="mobile phone with multiple screens photo"
@@ -112,7 +109,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="third-section-item">
               <img
                 src="./images/gallery-img3.jpg"
                 alt="mobile phone held by someone"
@@ -134,8 +131,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header team-header">Mark Guerrero</h3>
-              <p class="job-title">Product Designer</p>
+              <div class="team-description">
+                <h3 class="small-header team-header">Mark Guerrero</h3>
+                <p class="job-title">Product Designer</p>
+              </div>
             </li>
             <li class="team-tile">
               <img
@@ -144,8 +143,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header team-header">Tom Ford</h3>
-              <p class="job-title">Frontend Developer</p>
+              <div class="team-description">
+                <h3 class="small-header team-header">Tom Ford</h3>
+                <p class="job-title">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-tile">
               <img
@@ -154,8 +155,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header team-header">Camila Garcia</h3>
-              <p class="job-title">Marketing</p>
+              <div class="team-description">
+                <h3 class="small-header team-header">Camila Garcia</h3>
+                <p class="job-title">Marketing</p>
+              </div>
             </li>
             <li class="team-tile">
               <img
@@ -164,8 +167,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="small-header team-header">Daniel Wilson</h3>
-              <p class="job-title">UI Designer</p>
+              <div class="team-description">
+                <h3 class="small-header team-header">Daniel Wilson</h3>
+                <p class="job-title">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -173,7 +178,7 @@
     </main>
     <footer class="section footer-section">
       <div class="container">
-        <a href="./index.html" class="logo link"
+        <a href="./index.html" class="logo link footer-link"
           >Web<span class="footer-logo">Studio</span></a
         >
         <p class="footer-note">
