--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section portfolio-main-section">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="list filter-list">
@@ -63,7 +63,7 @@
             </li>
           </ul>
           <ul class="list portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img1.jpg"
@@ -71,11 +71,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Banking App Interface Concept</h2>
                 <p class="portfolio-paragraph">App</p></a
               >
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img2.jpg"
@@ -83,11 +85,13 @@
                   width="360"
                   height="300"
                 />
+              <div class="portfolio-description">
                 <h2 class="portfolio-header">Cashless Payment</h2>
                 <p class="portfolio-paragraph">Marketing</p></a
               >
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img3.jpg"
@@ -95,11 +99,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Meditation App</h2>
                 <p class="portfolio-paragraph">App</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img4.jpg"
@@ -107,11 +113,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Taxi Service</h2>
                 <p class="portfolio-paragraph">Marketing</p></a
               >
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img5.jpg"
@@ -119,11 +127,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Screen Illustrations</h2>
                 <p class="portfolio-paragraph">Design</p></a
               >
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img6.jpg"
@@ -131,11 +141,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Online Courses</h2>
                 <p class="portfolio-paragraph">Marketing</p></a
               >
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img7.jpg"
@@ -143,11 +155,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Instagram Stories Concept</h2>
                 <p class="portfolio-paragraph">Design</p></a
               >
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img8.jpg"
@@ -155,11 +169,13 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Organic Food</h2>
                 <p class="portfolio-paragraph">Web Site</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/portfolio-img9.jpg"
@@ -167,8 +183,10 @@
                   width="360"
                   height="300"
                 />
+                <div class="portfolio-description">
                 <h2 class="portfolio-header">Fresh Coffee</h2>
                 <p class="portfolio-paragraph">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -177,7 +195,7 @@
     </main>
     <footer class="section footer-section">
       <div class="container">
-        <a href="./index.html" class="logo link"
+        <a href="./index.html" class="logo link footer-link"
           >Web<span class="footer-logo">Studio</span></a
         >
         <p class="footer-note">
