--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section third-section">
         <div class="container">
           <h2 class="section-header">What are we doing</h2>
           <ul class="list third-section-list">
