--- a/portfolio.html
+++ b/portfolio.html
@@ -72,10 +72,12 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Banking App Interface Concept</h2>
-                <p class="portfolio-paragraph">App</p></a
-              >
-              </div>
+                  <h2 class="portfolio-header">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-paragraph">App</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
@@ -85,11 +87,11 @@
                   width="360"
                   height="300"
                 />
-              <div class="portfolio-description">
-                <h2 class="portfolio-header">Cashless Payment</h2>
-                <p class="portfolio-paragraph">Marketing</p></a
-              >
-              </div>
+                <div class="portfolio-description">
+                  <h2 class="portfolio-header">Cashless Payment</h2>
+                  <p class="portfolio-paragraph">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
@@ -100,8 +102,8 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Meditation App</h2>
-                <p class="portfolio-paragraph">App</p>
+                  <h2 class="portfolio-header">Meditation App</h2>
+                  <p class="portfolio-paragraph">App</p>
                 </div>
               </a>
             </li>
@@ -114,10 +116,10 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Taxi Service</h2>
-                <p class="portfolio-paragraph">Marketing</p></a
-              >
-              </div>
+                  <h2 class="portfolio-header">Taxi Service</h2>
+                  <p class="portfolio-paragraph">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
@@ -128,10 +130,10 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Screen Illustrations</h2>
-                <p class="portfolio-paragraph">Design</p></a
-              >
-              </div>
+                  <h2 class="portfolio-header">Screen Illustrations</h2>
+                  <p class="portfolio-paragraph">Design</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
@@ -142,10 +144,10 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Online Courses</h2>
-                <p class="portfolio-paragraph">Marketing</p></a
-              >
-              </div>
+                  <h2 class="portfolio-header">Online Courses</h2>
+                  <p class="portfolio-paragraph">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
@@ -156,10 +158,10 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Instagram Stories Concept</h2>
-                <p class="portfolio-paragraph">Design</p></a
-              >
-              </div>
+                  <h2 class="portfolio-header">Instagram Stories Concept</h2>
+                  <p class="portfolio-paragraph">Design</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
@@ -170,8 +172,8 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Organic Food</h2>
-                <p class="portfolio-paragraph">Web Site</p>
+                  <h2 class="portfolio-header">Organic Food</h2>
+                  <p class="portfolio-paragraph">Web Site</p>
                 </div>
               </a>
             </li>
@@ -184,8 +186,8 @@
                   height="300"
                 />
                 <div class="portfolio-description">
-                <h2 class="portfolio-header">Fresh Coffee</h2>
-                <p class="portfolio-paragraph">Web Site</p>
+                  <h2 class="portfolio-header">Fresh Coffee</h2>
+                  <p class="portfolio-paragraph">Web Site</p>
                 </div>
               </a>
             </li>
